fix: in Rating component to horizontal align

--- a/src/components/ui/rating/rating.module.scss
+++ b/src/components/ui/rating/rating.module.scss
@@ -1,3 +1,7 @@
+.rating {
+  display: flex;
+}
+
 .star {
   cursor: pointer;
   display: inline-flex;
